--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,4 +22,5 @@ edition = "2021"
 anyhow = "1.0.59"                                   # error handling
 bytes = "1.3.0"                                     # helps manage buffers
 thiserror = "1.0.32"                                # error handling
+memchr = { version = "2", default-features = false }
 tokio = { version = "1.23.0", features = ["full"] } # async networking
